<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/nested_scroll_view_content_description"
    android:fillViewport="true"
    app:layout_constrainedHeight="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        tools:context=".presentation.DetailsFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageCardView"
            style="@style/CustomImageCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/medium"
            app:layout_constraintBottom_toTopOf="@id/crewTextView"
            app:layout_constraintEnd_toStartOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="@dimen/tiny">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/media_content_image_width"
                android:layout_height="@dimen/media_content_image_height"
                android:scaleType="fitXY"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/image_placeholder" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/titleTextView"
            style="@style/TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/medium"
            android:textAlignment="textStart"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/yearTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Harry Potter and the Deathly Hallows - Part 1" />

        <TextView
            android:id="@+id/yearTextView"
            style="@style/BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/extra_small"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            tools:text="2010" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_screen_nested_scroll_view_height"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:contentDescription="@string/nested_scroll_view_content_description"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@+id/yearTextView">

            <TextView
                android:id="@+id/descriptionTextView"
                style="@style/BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/media_content_description_text_view_height"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                tools:ignore="TextSizeCheck,VisualLintLongText"
                tools:text="A sexually repressed woman's husband is having an affair with her sister. The arrival of a visitor with a rather unusual fetish changes everything." />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:ignore="TextContrastCheck"
            tools:text="Favorite" />

        <TextView
            android:id="@+id/crewTextView"
            style="@style/TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/large"
            android:text="@string/row_team_title"
            android:textAlignment="textStart"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/crewRecyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/crewRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/castTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crewTextView"
            tools:listitem="@layout/team_member_item" />

        <TextView
            android:id="@+id/castTextView"
            style="@style/TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/large"
            android:text="@string/row_casting_title"
            android:textAlignment="textStart"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/castRecyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crewRecyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/castRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/streamingSourceTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/castTextView"
            tools:listitem="@layout/team_member_item" />

        <TextView
            android:id="@+id/streamingSourceTextView"
            style="@style/TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/large"
            android:text="@string/row_streaming_sources_title"
            android:textAlignment="textStart"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/streamingSourceRecyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/castRecyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/streamingSourceRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginBottom="@dimen/medium"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streamingSourceTextView"
            tools:listitem="@layout/streaming_source_item" />

        <ProgressBar
            android:id="@+id/circular_progress_bar"
            style="@style/CircularProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>